--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,9 +5,22 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textview_list_item"
+        android:id="@+id/textview_list_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="italic"/>
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/textview_list_item_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="normal"/>
+
+    <Button
+        android:id="@+id/textview_list_item_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Details"
+        />
 
 </LinearLayout>
