--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,6 +20,10 @@
         android:name="com.example.mandatoryassignment.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
+        <argument
+            android:name="id"
+            app:argType="Integer"
+            />
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
